infra/kubernetes-prod/ingress-srv.yaml
#FOR PROD ENVIRONMENT, only change is the host route

#the metadata->annotations tells ingress we are trying to feed it some routing rules
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' #tells nginx some file paths will have regex
spec:
  rules:
    - host: www.abode.lol #actual domain name for our site
      http:
        paths:
          - path: /api/users/?(.*) #anytime someone makes a request to this, we sent it to backend/service/
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/frags/?(.*) #anytime someone makes a request to this, we sent it to backend/service/
            pathType: Prefix
            backend:
              service:
                name: frags-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*) #anytime someone makes a request to this, we sent it to backend/service/
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /api/payments/?(.*) #anytime someone makes a request to this, we sent it to backend/service/
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /?(.*) #catches every other route
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.abode.lol'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
